--- a/master/index.html
+++ b/master/index.html
@@ -9,6 +9,9 @@
 <body>
     <div class="content">
         <h1>hello</h1>
+        <a href="https://vk.com/pohuiproeba1i">
+           <button>Кнопка</button>
+        </a>
     </div>
 </body>
 </html>
