--- a/master/index.html
+++ b/master/index.html
@@ -14,4 +14,20 @@
         </a>
     </div>
 </body>
+
+
+<section>
+    <h3>секция</h3>
+
+</section>
+
+<footer>
+<ul>
+    <li><a href="">1</a></li>
+    <li><a href="">2</a></li>
+    <li><a href="">3</a></li>
+</ul>
+
+    
+</footer>
 </html>
