--- a/master/index.html
+++ b/master/index.html
@@ -1,33 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Firstpage</title>
+    <title>Divice</title>
 </head>
-<body>
-    <div class="content">
-        <h1>hello</h1>
-        <a href="https://vk.com/pohuiproeba1i">
-           <button>Кнопка</button>
-        </a>
-    </div>
+<body>   
+    <header>
+        <h1>Device</h1>
+    <nav>
+        <ul>
+            <li><a href="blank.html">каталог товаров</a></li>
+            <li><a href="blank.html">доставка</a></li>
+            <li><a href="blank.html">гарантия</a></li>
+            <li><a href="blank.html">контакты</a></li>
+        </ul>
+    </nav>
+    </header>
 </body>
 
 
-<section>
-    <h3>секция</h3>
 
-</section>
 
-<footer>
-<ul>
-    <li><a href="">1</a></li>
-    <li><a href="">2</a></li>
-    <li><a href="">3</a></li>
-</ul>
 
-    
+
+
+
+<footer>  
 </footer>
 </html>
