--- a/Device/index.html
+++ b/Device/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Divice</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>   
     <header>
-        <h1>Device</h1>
+        <h1 class="header_name">Device</h1>
     <nav>
         <ul>
             <li><a href="blank.html">каталог товаров</a></li>
